--- a/portfolio/src/template/base/nav.html
+++ b/portfolio/src/template/base/nav.html
@@ -13,8 +13,8 @@
 
   <div id="navbar" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">Projects</a>
-      <a class="navbar-item">Contact</a>
+      <a href="/" class="navbar-item">Projects</a>
+      <a href="/contact" class="navbar-item">Contact</a>
 
       <!-- <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">More</a>
