--- a/portfolio/src/assets/style/index.scss
+++ b/portfolio/src/assets/style/index.scss
@@ -1,5 +1,10 @@
 @import "./main.scss";
 
+#new-project-button {
+  // Hidden by default
+  display: none;
+}
+
 .project-card {
   background-color: #999;
 }
