Add logos and links

--- a/src/template/base/footer.html
+++ b/src/template/base/footer.html
@@ -1,13 +1,23 @@
 <footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-      is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+  <div class="content">
+    <p class="has-text-centered">
+      <strong>ArWeb portfolio</strong> by <a href="https://arweb.no">Eirik Fossestøl Andresen</a>. The source code is
+      licensed
+      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
     </p>
 
-    <p>
-      <a href="/login.html">Admin login</a>
-    </p>
+    <div class="columns">
+      <p class="column">
+        <a href="https://github.com/EirikFA/IT-1-portfolio">Source code on GitHub</a>
+        <br>
+        <a href="https://arweb.no">ArWeb</a>
+        <br>
+        <a href="/login.html">Admin login</a>
+      </p>
+
+      <div class="column has-text-right">
+        <img src="../../assets/image/logo.png" alt="ArWeb logo" width="160">
+      </div>
+    </div>
   </div>
 </footer>
